# django-saml2-auth

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  reusable-test.yml  stale.yml
django_saml2_auth/: get_path.py  saml.py  user.py  utils.py  views.py
django_saml2_auth/tests/: settings.py  test_get_path.py  test_saml.py  test_user.py  test_utils.py
django_saml2_auth/tests/integration/: __init__.py  conftest.py  hooks.py  idp_flow.py  test_integration.py  urls.py
