[project]
name = "grafana-django-saml2-auth"
readme = "README.md"
dynamic = ["version"]
description = "Django SAML2 Authentication Made Easy."
authors = [{ name = "Mostafa Moradian", email = "mostafa@grafana.com" }]
requires-python = ">=3.10"
dependencies = [
    "pyjwt==2.12.1",
    "pysaml2==7.5.4",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "cyclonedx-bom==7.3.0",
    "django-stubs==6.0.2",
    "mypy==1.20.0",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "responses==0.26.0",
    "ruff==0.15.9",
    "types-pysaml2==1.0.1",
    "types-setuptools==82.0.0.20260408",
]

[build-system]
requires = ["hatchling==1.29.0", "uv-dynamic-versioning==0.14.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["django_saml2_auth"]

[tool.ruff]
exclude = [
    "dist",
    "build",
    "env",
    "venv",
    ".env",
    ".venv",
    ".tox",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    ".ruff",
]
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_saml2_auth.tests.settings"
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
addopts = ["--import-mode=importlib"]
testpaths = ["django_saml2_auth/tests"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_saml2_auth.tests.settings"
